Resized and styled the window; The window gets focussed after timer ends

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style type="text/css">
+            @font-face {
+                font-family: 'RobotoThin';
+                src: url('Roboto-Thin-webfont.woff');
+            }
+            body {
+                background-color: #D50000;
+            }
+            div {
+                font-family: RobotoThin, sans-serif;
+                font-size: 80px;
+                color: white;
+            }
+        </style>
         <script defer src='main.js'></script>
         <script defer src='timer.js'></script>
     </head>
