--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@
                 font-family: RobotoThin, sans-serif;
                 font-size: 80px;
                 color: #D50000;
+                text-align: center;
             }
             #title {
                 font-family: RobotoRegular, sans-serif;
@@ -45,6 +46,35 @@
                 border-bottom: 5px solid white;
                 color: white;
             }
+
+            #startStop {
+                height: 50px;
+                width: 50px;
+                background-color: #D50000;
+                border-radius: 30px;
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+            }
+
+            #startStop div {
+                height: 20px;
+                width: 20px;
+                background: white;
+                position: relative;
+                top: 15px;
+                left: 15px;
+            }
+
+            #startStop.start div {
+                width: 0;
+                height: 0;
+                border-top: 10px solid transparent;
+                border-bottom: 10px solid transparent;
+                border-left: 20px solid white;
+                background: #D50000;
+                left: 18px;
+            }
         </style>
         <script defer src='main.js'></script>
         <script defer src='timer.js'></script>
@@ -56,7 +86,9 @@
             <div id='shortBreak'>Short Break</div>
             <div id='longBreak'>Long Break</div>
         </div>
-        <button id='startStop'>Start</button>
+        <div id='startStop' class='start'>
+            <div></div>
+        </div>
         <div id='timer'></div>
       </body>
 </html>
