Updated styles as per material design guidelines

--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,10 @@
                 font-family: 'RobotoRegular';
                 src: url('Roboto-Regular-webfont.woff');
             }
+            @font-face {
+                font-family: 'RobotoMedium';
+                src: url('Roboto-Medium-webfont.woff');
+            }
             body {
                 margin: 0;
             }
@@ -18,32 +22,39 @@
                 font-size: 80px;
                 color: #D50000;
                 text-align: center;
+                margin-top: 15px;
             }
-            #title {
-                font-family: RobotoRegular, sans-serif;
-                font-size: 32px;
+            #app-bar {
+                font-family: RobotoMedium, sans-serif;
+                font-size: 20px;
                 color: white;
                 background-color: #D50000;
-                padding-left: 10px;
+                padding-left: 16px;
+                height: 56px;
+                line-height: 56px;
             }
             #tabs {
-                font-family: RobotoRegular, sans-serif;
-                font-size: 18px;
+                font-family: RobotoMedium, sans-serif;
+                font-size: 13px;
                 color: white;
                 display: flex;
                 justify-content: space-around;
                 background-color: #D50000;
-                padding: 10px 0 0 0;
-                margin-bottom: 5px;
+                line-height: 48px;
+                margin-bottom: 4px;
+                height: 48px;
+                text-transform: uppercase;
+                cursor: pointer;
+                box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
             }
             #tabs div {
                 flex-grow: 1;
                 text-align: center;
-                color: rgba(128, 0, 0, 255);
+                color: rgba(255, 255, 255, 0.6);
             }
 
             #tabs div.selected {
-                border-bottom: 5px solid white;
+                border-bottom: 2px solid white;
                 color: white;
             }
 
@@ -55,32 +66,28 @@
                 position: absolute;
                 bottom: 10px;
                 right: 10px;
+                box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.24);
+                cursor: pointer;
             }
 
             #startStop div {
-                height: 20px;
-                width: 20px;
-                background: white;
+                height: 24px;
+                width: 24px;
                 position: relative;
-                top: 15px;
-                left: 15px;
+                top: 14px;
+                left: 14px;
+                background: url('ic_stop_24px.svg') 24px;
             }
 
             #startStop.start div {
-                width: 0;
-                height: 0;
-                border-top: 10px solid transparent;
-                border-bottom: 10px solid transparent;
-                border-left: 20px solid white;
-                background: #D50000;
-                left: 18px;
+                background: url('ic_play_arrow_24px.svg') 24px;
             }
         </style>
         <script defer src='main.js'></script>
         <script defer src='timer.js'></script>
     </head>
     <body>
-        <div id='title'>Tamatar</div>
+        <div id='app-bar'>Tamatar</div>
         <div id='tabs'>
             <div id='pomodoro' class='selected'>Pomodoro</div>
             <div id='shortBreak'>Short Break</div>
