Refactored pomodoro.js

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href='/src/styles/style.css'>
-    <script defer src='src/scripts/main.js'></script>
+    <script defer src='src/scripts/pomodoro.js'></script>
     <script defer src='src/scripts/timer.js'></script>
 </head>
 
